@@ -1,3 +1,5 @@
+// Transport Security Layer (TLS)
+// Copyright (c) 2003-2004 Carlos Guzman Alvarez
 
 //
 // Permission is hereby granted, free of charge, to any person obtaining
@@ -19,29 +21,6 @@
 // OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
-/* Transport Security Layer (TLS)
- * Copyright (c) 2003-2004 Carlos Guzman Alvarez
- * 
- * Permission is hereby granted, free of charge, to any person 
- * obtaining a copy of this software and associated documentation 
- * files (the "Software"), to deal in the Software without restriction, 
- * including without limitation the rights to use, copy, modify, merge, 
- * publish, distribute, sublicense, and/or sell copies of the Software, 
- * and to permit persons to whom the Software is furnished to do so, 
- * subject to the following conditions:
- * 
- * The above copyright notice and this permission notice shall be included 
- * in all copies or substantial portions of the Software.
- * 
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, 
- * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES 
- * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND 
- * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT 
- * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, 
- * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, 
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER 
- * DEALINGS IN THE SOFTWARE.
- */
 
 using System;
 using System.Text;
@@ -424,6 +403,24 @@ namespace Mono.Security.Protocol.Tls
 
 				default:
 					throw new NotSupportedException("Unsupported security protocol type");
+			}
+		}
+
+		public void ChangeProtocol(short protocol)
+		{
+			SecurityProtocolType protocolType = this.DecodeProtocolCode(protocol);
+
+			if ((protocolType & this.SecurityProtocolFlags) == protocolType ||
+				(this.SecurityProtocolFlags & SecurityProtocolType.Default) == SecurityProtocolType.Default)
+			{
+				this.SecurityProtocol = protocolType;
+				this.SupportedCiphers.Clear();
+				this.SupportedCiphers = null;
+				this.SupportedCiphers = CipherSuiteFactory.GetSupportedCiphers(protocolType);
+			}
+			else
+			{
+				throw new TlsException(AlertDescription.ProtocolVersion, "Incorrect protocol version received from server");
 			}
 		}
 
